--- a/section-2/index.html
+++ b/section-2/index.html
@@ -9,5 +9,6 @@
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
 
+    <script src="functions.js"></script>
     <script src="scripts.js"></script>
 </html>
