Added and Modified | arrays.js, index.html

--- a/section-2/index.html
+++ b/section-2/index.html
@@ -10,5 +10,6 @@
     </body>
 
     <script src="functions.js"></script>
-    <script src="scripts.js"></script>
+    <script src="arrays.js"></script>
+    <script src="variables.js"></script>
 </html>
