--- a/section-2/index.html
+++ b/section-2/index.html
@@ -11,5 +11,6 @@
 
     <script src="functions.js"></script>
     <script src="arrays.js"></script>
+    <script src="objects.js"></script>
     <script src="variables.js"></script>
 </html>
