Added and Modified | scripts.js, index.html

--- a/section-3/index.html
+++ b/section-3/index.html
@@ -9,5 +9,5 @@
         <h1>Section 3: JavaScript BTS</h1>
     </body>
 
-    {% comment %} <script src="functions.js"></script> {% endcomment %}
+    <script src="scripts.js"></script>
 </html>
